--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/dotenv-safe": "^8.1.1",
-    "@types/node": "^15.0.1",
+    "@types/express": "^4.17.11",
+    "@types/node": "^15.6.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@types/jest": "^26.0.23",
     "dotenv-safe": "^8.2.0",
+    "express": "^4.17.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.5"
   }
