--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/dotenv-safe": "^8.1.1",
     "@types/express": "^4.17.11",
     "@types/node": "^15.6.0",
@@ -34,9 +35,11 @@
   },
   "dependencies": {
     "@types/jest": "^26.0.23",
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "pino": "^6.11.3",
     "ts-jest": "^26.5.5"
   }
 }
