--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/config": "0.0.38",
     "@types/cors": "^2.8.10",
     "@types/dotenv-safe": "^8.1.1",
     "@types/express": "^4.17.11",
+    "@types/express-pino-logger": "^4.0.2",
     "@types/node": "^15.6.0",
+    "@types/pino": "^6.3.8",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
@@ -35,9 +38,11 @@
   },
   "dependencies": {
     "@types/jest": "^26.0.23",
+    "config": "^3.3.6",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "express-pino-logger": "^6.0.0",
     "jest": "^26.6.3",
     "pino": "^6.11.3",
     "ts-jest": "^26.5.5"
