--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-pino-logger": "^4.0.2",
+    "@types/mongoose": "^5.10.5",
     "@types/node": "^15.6.0",
     "@types/pino": "^6.3.8",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -42,6 +43,7 @@
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
     "jest": "^26.6.3",
+    "mongoose": "^5.12.11",
     "pino": "^6.11.3",
     "ts-jest": "^26.5.5"
   }
