dotenv-cli para gerenciar dados sensiveis

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-MY_NAME=Test Project
+PORT=
+MONGODB_URL=
+JWT_TOKEN_SECRET_KEY=
+JWT_REFRESH_TOKEN_SECRET_KEY=
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
