--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-  "useTabs": true,
-  "tabWidth": 2,
-  "printWidth": 120,
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "arrowParens": "avoid",
-  "semi": true
+	"useTabs": false,
+	"tabWidth": 2,
+	"printWidth": 120,
+	"singleQuote": true,
+	"trailingComma": "es5",
+	"arrowParens": "avoid",
+	"semi": true
 }
