--- a/package.json
+++ b/package.json
@@ -28,9 +28,16 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-pino-logger": "^4.0.2",
+    "@types/http-status-codes": "^1.2.0",
     "@types/mongoose": "^5.10.5",
     "@types/node": "^15.6.0",
+    "@types/passport": "^1.0.6",
+    "@types/passport-google-oauth20": "^2.0.7",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@types/pino": "^6.3.8",
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "dotenv-cli": "^4.0.0",
@@ -52,9 +59,17 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
+    "http-status-codes": "^2.1.4",
     "jest": "^26.6.3",
     "mongoose": "^5.12.11",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pino": "^6.11.3",
+    "swagger-autogen": "^2.9.1",
+    "swagger-jsdoc": "^6.0.1",
+    "swagger-ui-express": "^4.1.6",
     "ts-jest": "^26.5.5"
   },
   "engines": {
