--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
   "author": "Claudiney Calixto da Silva",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/config": "0.0.38",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-pino-logger": "^4.0.2",
+    "@types/express-rate-limit": "^5.1.1",
     "@types/http-status-codes": "^1.2.0",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.10.5",
     "@types/node": "^15.6.0",
     "@types/passport": "^1.0.6",
@@ -55,13 +60,19 @@
   },
   "dependencies": {
     "@types/jest": "^26.0.23",
+    "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
+    "express-rate-limit": "^5.2.6",
     "http-status-codes": "^2.1.4",
     "jest": "^26.6.3",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.11",
+    "node-cache": "^5.1.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
