--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "dotenv -e .env npm run lint && npm run lint && npm run test:unit && npm run test:functional",
     "test:unit": "jest",
     "test:watch": "jest --watch",
-    "test:functional": "dotenv -e .env jest --projects ./test --runInBand"
+    "test:functional": "jest --projects ./test --runInBand"
   },
   "keywords": [
     "node",
@@ -47,6 +47,7 @@
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/pino": "^6.3.8",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -86,6 +87,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pino": "^6.11.3",
+    "supertest": "^6.1.3",
     "swagger-autogen": "^2.9.1",
     "swagger-jsdoc": "^6.0.1",
     "swagger-ui-express": "^4.1.6",
