--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./src/**/*.ts", "./test/**/*.ts"],
+  "include": ["./src/**/*.ts", "./test/**/*.ts", "test/jest-setup.js"],
   "exclude": ["./node_modules/*", "dist"]
 }
