--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
     "@types/jest": "^26.0.23",
     "@types/module-alias": "^2.0.0",
     "bcrypt": "^5.0.1",
